# pyqure

./: pyproject.toml
src/pyqure/: __init__.py  pyqure.py
tests/test_pyqure/: test_pyqure.py
