[project]
name = "pyqure"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonathan",email = "johjo@ytreza.org"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)"
]

[tool.poetry]
name = "pyqure"
version = "0.1.0"
packages = [{include = "pyqure", from = "src"}]
description = ""
authors = [
    "Jonathan Laurent <contact@ytreza.dev>"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
