[project]
name = "pyqure"
version = "0.1.0"
description = ""
authors = [{ name = "Jonathan", email = "johjo@ytreza.org" }]
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[tool.hatch.build.targets.sdist]
include = ["src/pyqure"]

[tool.hatch.build.targets.wheel]
include = ["src/pyqure"]

[tool.hatch.build.targets.wheel.sources]
"src/pyqure" = "pyqure"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
